...
                NavigationLink(L10n.PhotoCompression.Button.takePhoto) {
                    CameraViewController(image: $imageData)
                }
                Button(L10n.PhotoCompression.Button.compressPhoto) {
                    compressedImage = imageData.jpegData(compressionQuality: 0.9) ?? .init()
                }
                .accessibilityIdentifier("compressPhotoButton")
                Spacer()
            }
            InactiveView()
                .opacity(stateManager.isActive ? 0 : 100)
        }
        .onAppear {
...
